fix contrast on syntax highlighting theme colors

--- a/assets/styles/hljs.css
+++ b/assets/styles/hljs.css
@@ -14,7 +14,7 @@
   
   .highlight-theme-gist .hljs-comment,
   .highlight-theme-gist .hljs-meta {
-    color: #969896;
+    color: #737373;
   }
   
   .highlight-theme-gist .hljs-variable,
@@ -35,12 +35,12 @@
   .highlight-theme-gist .hljs-symbol,
   .highlight-theme-gist .hljs-bullet,
   .highlight-theme-gist .hljs-attribute {
-    color: #0086b3;
+    color: #01759c;
   }
   
   .highlight-theme-gist .hljs-section,
   .highlight-theme-gist .hljs-name {
-    color: #63a35c;
+    color: #477742;
   }
   
   .highlight-theme-gist .hljs-tag {
@@ -110,7 +110,7 @@
   .highlight-theme-github .hljs-variable,
   .highlight-theme-github .hljs-template-variable,
   .highlight-theme-github .hljs-tag .hljs-attr {
-    color: #008080;
+    color: #016d6d;
   }
   
   .highlight-theme-github .hljs-string,
@@ -137,7 +137,8 @@
   
   .highlight-theme-github .hljs-tag,
   .highlight-theme-github .hljs-name,
-  .highlight-theme-github .hljs-attribute {
+  .highlight-theme-github .hljs-attribute,
+  .highlight-theme-github .hljs-attr {
     color: #000080;
     font-weight: normal;
   }
@@ -185,7 +186,7 @@
   /* Ocean Comment */
   .highlight-theme-ocean .hljs-comment,
   .highlight-theme-ocean .hljs-quote {
-    color: #65737e;
+    color: #98c1a3;
   }
   
   /* Ocean Red */
@@ -197,7 +198,7 @@
   .highlight-theme-ocean .hljs-selector-class,
   .highlight-theme-ocean .hljs-regexp,
   .highlight-theme-ocean .hljs-deletion {
-    color: #bf616a;
+    color: #e0838c;
   }
   
   /* Ocean Orange */
@@ -213,8 +214,10 @@
   }
   
   /* Ocean Yellow */
-                        .hljs-attribute
-  .highlight-theme-ocean .hljs-attribute {
+                         .hljs-attribute,
+                         .hljs-attr
+  .highlight-theme-ocean .hljs-attribute,
+  .highlight-theme-ocean .hljs-attr {
     color: #ebcb8b;
   }
   
@@ -339,6 +342,7 @@
   
   .highlight-theme-vs .hljs-attr,
   .highlight-theme-vs .hljs-attribute,
+  .highlight-theme-vs .hljs-attr,
   .highlight-theme-vs .hljs-builtin-name {
     color: #9CDCFE;
   }
